fixed expanded aligned elements

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -56,8 +56,3 @@ a:hover {
 }
 
 .fa-times {color: $close;}
-
-
-.dropdown-text {
-
-}
